--- a/src/index.css
+++ b/src/index.css
@@ -17,17 +17,32 @@ body {
 @keyframes scroll {
   0% {
     transform: translateX(0);
+    opacity: 1;
   }
-  50% {
+  10% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  60% {
     transform: translateX(calc(-100% + 200px));
+    opacity: 1;
+  }
+  70% {
+    transform: translateX(calc(-100% + 200px));
+    opacity: 1;
+  }
+  85% {
+    transform: translateX(calc(-100% + 200px));
+    opacity: 0;
   }
   100% {
     transform: translateX(0);
+    opacity: 0;
   }
 }
 
 .animate-scroll {
-  animation: scroll 10s linear infinite;
+  animation: scroll 12s linear infinite;
   display: inline-block;
   padding-right: 50px;
 }
